[package]
name = "ceth"
version = "0.1.0"
edition = "2024"

[dependencies]
# reth crates - 使用本地路径引用
reth-ethereum = { path = "../reth/crates/ethereum/reth", features = ["evm", "node-api", "node", "test-utils"] }
reth-node-builder = { path = "../reth/crates/node/builder" }
reth-node-core = { path = "../reth/crates/node/core" }
reth-tasks = { path = "../reth/crates/tasks" }
reth-config = { path = "../reth/crates/config" }
reth-chainspec = { path = "../reth/crates/chainspec" }
reth-tracing = { path = "../reth/crates/tracing" }
reth-evm = { path = "../reth/crates/evm/evm" }
reth-revm = { path = "../reth/crates/revm" }
reth-network = { path = "../reth/crates/net/network", optional = true }
reth-provider = { path = "../reth/crates/storage/provider", optional = true }
reth-db = { path = "../reth/crates/storage/db", optional = true }
reth-rpc = { path = "../reth/crates/rpc/rpc", optional = true }
reth-consensus = { path = "../reth/crates/consensus/consensus", optional = true }

# 第三方依赖
tokio = { version = "1.38.0", features = ["full"] }
eyre = "0.6"
alloy-primitives = "1.4"
alloy-genesis = "1.0.38"

[features]
default = []
full = [
    "network",
    "provider",
    "rpc",
    "consensus"
]
network = ["dep:reth-network"]
provider = ["dep:reth-provider", "dep:reth-db"]
rpc = ["dep:reth-rpc"]
consensus = ["dep:reth-consensus"]
